--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -128,7 +128,7 @@
     ];
     products.forEach(item => {
     const productCard = `
-        <div class="col-12 col-md-4 col-lg-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex align-items-stretch">
             <a href="/product/${item.id}/" style="text-decoration: none; color: inherit;">
                 <div class="card my-3">
                     <img src="${imageBase + item.image}" class="card-img-top image-height" alt="${item.name}">
