--- a/shop/templates/shop/product_details.html
+++ b/shop/templates/shop/product_details.html
@@ -164,7 +164,7 @@
                     ` : `
                     <button class="btn btn-secondary"><i class="fa fa-minus"></i> Out of Stock</button>
                     `}
-                    <button class="btn btn-danger ms-2"><i class="fa fa-heart"></i></button>
+                    <button class="btn btn-danger mt-3 ms-2"><i class="fa fa-heart"></i></button>
                 </div>
             </div>
         </div>
